# CrabFlow-Canary

./: README.md  dev-commands.txt  index.html  package-lock.json
crabflow-core/: Cargo.toml  CrabFlow.json  tauri.conf.json
crabflow-core/src/: dhcp.rs  main.rs  monitor.rs  role_manager.rs  settings.json  settings.rs  tauri_interface.rs  web_admin.rs  webpage.rs
crabflow-core/src-tauri/: tauri.conf.json
crabflow-core/src/client_list/: client.rs  mod.rs
crabflow-core/src/routes/: about.rs  index.rs  mod.rs
crabflow-core/src/user_list/: mod.rs  users.rs
crabflow-core/templates/: 403.html.tera  404.html.tera  500.html.tera  502.html.tera  dashboard.html.tera  device-manager.html.tera  index.html.tera  settings.html.tera
crabflow-core/templates/static/: dashboard.js  style.css
docs/: index.md
docs/backend/: README.md
