[package]
name = "crabflow-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"]}
rocket_dyn_templates = { version = "0.1.0", features = ["tera"]}
tokio = { version = "1", features = ["macros","rt-multi-thread"]}
serde = { version = "1.0", features = ["derive"]}
