[package]
name = "crabflow-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["api-all"] }
getifaddrs = "0.5"
sysinfo = "0.29.11"
gethostname = "1.0.2"
log = "0.4"
env_logger = "0.10"
