[package]
name = "crabflow-core" # The core crate name, which matches your main directory
version = "0.1.0"
edition = "2021"

[dependencies]
# Example dependencies (adjust as needed for your specific use case)
tokio = { version = "1", features = ["full"] } # Common for async Rust, esp. with web/networking
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

# Rocket Web Framework (if you're using it)
rocket = { version = "0.5.0", features = ["json"] }

# Tauri (if you're building a desktop app)
tauri = { version = "1.5", features = ["api-all"] }
tauri-build = { version = "1.5", features = [] }

# Modules referenced in your directory structure might need external crates
# For example, for networking, user management, etc.
# client-list and user-list suggest data structures
# filter.rs suggests a need for data filtering logic
# Add your specific crate dependencies here...